--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-dbs={"prod":{"couchbase":"10.130.9.94","redis":{"host":"10.130.9.34","port":6379},"elasticsearch":{"host":"10.130.9.100:9200"}},"qa":{"couchbase":"10.130.9.92","redis":{"host":"10.130.9.92","port":6379},"elasticsearch":{"host":"10.130.9.92:9203"}}}
-~                                                                              
+dbs={"local":{"couchbase":"127.0.0.1","redis":{"host":"localhost","port":6379},"elasticsearch":{"host":"127.0.0.1:9200"}},"qa":{"couchbase":"10.130.9.92","redis":{"host":"10.130.9.92","port":6379},"elasticsearch":{"host":"10.130.9.92:9203"}}}
+~ 
